cmake_minimum_required(VERSION 3.10)
project(xenius)
include_directories(../LIBE57)
file(GLOB CPP_CODE "../LIBE57/*.cpp")
file(GLOB C_CODE "../LIBE57/*.c")
add_definitions(-DLINUX)
add_executable(xenius ../xenius.cpp ${CPP_CODE} ${C_CODE})
find_library(XERCES_LIBRARY NAMES xerces-c PATHS /usr/local/lib)
target_link_libraries(xenius ${XERCES_LIBRARY})
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
