cmake_minimum_required(VERSION 3.10)
project(nubea)
include_directories(../PCF)
include_directories(../LIBE57)
include_directories(../BOOST/boost_1_76_0)
include_directories(../XERCES/xerces-c-3.2.3/BUILD/src)
include_directories(../XERCES/xerces-c-3.2.3/src)
file(GLOB CPP_CODE "../PCF/*.cpp" "../LIBE57/*.cpp")
file(GLOB C_CODE "../LIBE57/*.c")
add_definitions(-DLINUX)
add_executable(nubea ../nubea.cpp ${CPP_CODE} ${C_CODE})
find_library(BOOST_LIBRARY NAMES boost PATHS ../BOOST/boost_1_76_0/libs)
target_link_libraries(nubea ../XERCES/xerces-c-3.2.3/BUILD/src/Debug/xerces-c_3D)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
